fixed fade and scrollbar

--- a/src/sass/utils.scss
+++ b/src/sass/utils.scss
@@ -45,23 +45,25 @@ accordion {
 }
 
 .fade-on {
-    @include transition(opacity $fade-speed ease-in);
+    @include transition(opacity $fade-speed ease);
     opacity: $fade-amount;
     pointer-events: none;
+    z-index: 2;
 }
 
 .fade-off {
-    @include transition(all $fade-speed ease-in);
+    @include transition(all $fade-speed ease);
     opacity: 1;
+    z-index: 2;
 }
 
 .scale-on {
-    @include transition(transform $scale-speed ease-in);
+    @include transition(transform $scale-speed ease);
     @include transform(scale($scale-amount, $scale-amount) translate(0.25 * $blocksize, -0.25 * $blocksize));
 }
 
 .scale-off {
-    @include transition(transform $scale-speed ease-in);
+    @include transition(transform $scale-speed ease);
     @include transform(scale(1,1) translate(0px, 0px));
 }
 
